fix: wrap block-level title content in heading for parity

--- a/components/Callout/style.scss
+++ b/components/Callout/style.scss
@@ -93,6 +93,10 @@
     border-color: var(--border);
     border-width: 3px;
     padding: 0 0 0 0.8em;
+
+    &:is(h3 *, .callout-heading *) {
+      color: inherit;
+    }
   }
 
   h3, // for compatibility with old callouts
